[project]
name = "rppg-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stijn van Lierop", email = "150940112+StijnvLierop@users.noreply.github.com"},
]
dependencies = ["scipy>=1.16.3", "mediapipe==0.10.11", "opencv-python>=4.12.0.88", "pyinstaller>=6.17.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
