[project]
name = "rppg-demo"
version = "0.1.0"
description = "Demo app for showcasing the rPPG signal analysis technology for heart rate estimation using a webcam."
authors = [
    {name = "Stijn van Lierop", email = "150940112+StijnvLierop@users.noreply.github.com"},
]
dependencies = ["scipy>=1.16.3",
                "mediapipe==0.10.11",
                "opencv-python>=4.12.0.88",
               ]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
